--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "homepage": "https://mooresamuel.github.io/qAndA",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +20,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-native-svg": "^15.8.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "shadcn-ui": "^0.9.2",
     "tailwind": "^4.0.0",
