--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "shadcn-ui": "^0.9.2",
+    "socket.io-client": "^4.8.1",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
