--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "engines": {
+    "node": ">=14.0.0 <19.0.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
