--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-native-svg": "^15.8.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "shadcn-ui": "^0.9.2",
     "socket.io-client": "^4.8.1",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.4",
@@ -48,6 +47,13 @@
       "react-app/jest"
     ]
   },
+  "rules": {
+    "no-console": "off",
+    "no-unused-vars": "off", 
+    "react/prop-types": "off", 
+    "no-empty": "off",
+    "no-extra-semi": "off"
+  }
   "browserslist": {
     "production": [
       ">0.2%",
